@@ -210,7 +210,9 @@ fi
 #--------------------------------------------------------------------
 
 if test "`uname -s`" = "Darwin" ; then
-    AC_ARG_ENABLE(aqua, [  --enable-aqua           enable Aqua windowingsystem on Mac OS X [--disable-aqua]],
+    AC_ARG_ENABLE(aqua,
+		AC_HELP_STRING([--enable-aqua],
+                              [enable Aqua windowingsystem on Mac OS X (default: off)]),
                   [tk_aqua=$enableval], [tk_aqua=no])
     if test $tk_aqua = yes; then
         if test $tcl_corefoundation = no; then
@@ -331,21 +333,30 @@ fi
 #--------------------------------------------------------------------
 
 if test $tk_aqua = no; then
-    AC_MSG_CHECKING([for XScreenSaver support])
+
     tk_oldCFlags=$CFLAGS
     CFLAGS="$CFLAGS $XINCLUDES"
     tk_oldLibs=$LIBS
-    LIBS="$LIBS $XLIBSW -lXss -lXext"
-    AC_TRY_LINK([
-        #include <X11/Xlib.h>
-        #include <X11/extensions/scrnsaver.h>
-    ] , [
-        XScreenSaverAllocInfo();
-    ], [
-        AC_MSG_RESULT(yes)
-        XLIBSW="$XLIBSW -lXss -lXext"
-        AC_DEFINE(HAVE_XSS, 1, [Is XScreenSaver available?])
-    ], AC_MSG_RESULT(no))
+    LIBS="$tk_oldLibs $XLIBSW"
+    xss_header_found=no
+    AC_CHECK_HEADER(X11/extensions/scrnsaver.h, [
+	xss_header_found=yes
+    ],,[#include <X11/Xlib.h>])
+    xss_lib_found=no
+    AC_CHECK_FUNC(XScreenSaverQueryInfo,,[
+	AC_CHECK_LIB(Xext, XScreenSaverQueryInfo, [
+	    XLIBSW="$XLIBSW -lXext"
+	    xss_lib_found=yes
+	], [
+	    AC_CHECK_LIB(Xss,XScreenSaverQueryInfo, [
+		XLIBSW="$XLIBSW -lXss -lXext"
+		xss_lib_found=yes
+	    ],, -lXext)
+	])
+    ])
+    if test $xss_lib_found = yes -a $xss_header_found = yes; then
+	AC_DEFINE(HAVE_XSS, 1, [Is XScreenSaver available?])
+    fi
     CFLAGS=$tk_oldCFlags
     LIBS=$tk_oldLibs
 fi
@@ -356,7 +367,7 @@ fi
 
 if test $tk_aqua = no; then
     AC_ARG_ENABLE(xft,
-        [  --enable-xft         Use freetype/fontconfig/xft [--disable-xft]],
+        AC_HELP_STRING([--enable-xft],[Use freetype/fontconfig/xft (default: off)]),
         [enable_xft=$enableval],
         [enable_xft="no"])
     
